--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                 
                 <div class="user-menu">
                     <div class="user-info">
-                        <h4>Sarah Johnson</h4>
+                        <h4>Donika Stavro </h4>
                         <p>Sustainability Manager</p>
                     </div>
                     <div class="avatar">SJ</div>
